--- a/index.html
+++ b/index.html
@@ -4,23 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>Password Generator</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1>Password Generator</h1>
     </header>
-    <h2>Generate a Password</h2>
-    <textarea
-      readonly
-      id="password"
-      placeholder="Your Secure Password"
-      aria-label="Generated Password"
-    ></textarea>
-    <button id="generate">Generate Password</button>
-    <button id="copy">
-      Copy to Clipboard
-    </button>
+    <div class="passwordbox">
+      <h2>Generate a Password</h2>
+      <div class="password">
+        <textarea
+          readonly
+          id="password" class="passwordthing"
+          placeholder="Your Secure Password"
+          aria-label="Generated Password"
+        ></textarea>
+        <br>
+        <button class="buttons" id="generate">
+          Generate Password
+        </button>
+
+        <button class="buttons" id="copy">
+          Copy to Clipboard
+        </button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
